--- a/style.css
+++ b/style.css
@@ -3,3 +3,6 @@ html {
     color: #bbb;
     font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+td, th {
+    border: 1px solid #999;
+}
